mk/glink/lang/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    SUPERWORD
    AMPERSAND
    MPROD
    DOUBLECOLON
    POINT
    IN
    BINNUMBER
    HEXNUMBER
    WRONGSTRING
    SEMI
    OR
    FOR

Grammar

Rule 0     S' -> inblock
Rule 1     dblock -> block
Rule 2     dblock -> divider block
Rule 3     block -> LBRACE inblock RBRACE
Rule 4     inblock -> <empty>
Rule 5     inblock -> metaexpr
Rule 6     inblock -> inblock divider metaexpr
Rule 7     inblock -> divider inblock
Rule 8     inblock -> inblock divider
Rule 9     print -> PRINT expr
Rule 10    module -> MODULE WORD COLON dblock
Rule 11    deffunc -> DEFFUNC func COLON dblock
Rule 12    application -> APPLICATION WORD COLON dblock
Rule 13    define -> DEFINE WORD expr
Rule 14    declare -> WORD COLON expr
Rule 15    if -> IF expr QUESTION expr COLON expr
Rule 16    divider -> DIVIDER
Rule 17    input -> INPUT
Rule 18    func -> WORD LPAREN args RPAREN
Rule 19    metaexpr -> expr
Rule 20    metaexpr -> deffunc
Rule 21    metaexpr -> module
Rule 22    metaexpr -> application
Rule 23    metaexpr -> declare
Rule 24    metaexpr -> define
Rule 25    metaexpr -> downlevel
Rule 26    metaexpr -> if
Rule 27    metaexpr -> while
Rule 28    metaexpr -> loop
Rule 29    metaexpr -> input
Rule 30    list -> LBRACKET comms RBRACKET
Rule 31    list -> LBRACKET RBRACKET
Rule 32    while -> WHILE expr COLON expr
Rule 33    loop -> LOOP COLON expr
Rule 34    break -> BREAK
Rule 35    args -> <empty>
Rule 36    args -> comms
Rule 37    comms -> expr
Rule 38    comms -> comms COMMA expr
Rule 39    equal -> WORD EQUALS expr
Rule 40    expr -> exprnoalg
Rule 41    expr -> alg0
Rule 42    expr -> print
Rule 43    expr -> variables
Rule 44    expr -> python
Rule 45    expr -> execfile
Rule 46    expr -> break
Rule 47    expr -> exectext
Rule 48    expr -> equal
Rule 49    expr -> element
Rule 50    expr -> return
Rule 51    exprnoalg -> term
Rule 52    exprnoalg -> func
Rule 53    exprnoalg -> block
Rule 54    exprnoalg -> list
Rule 55    return -> RETURN expr
Rule 56    term -> str
Rule 57    term -> float
Rule 58    term -> int
Rule 59    term -> var
Rule 60    int -> NUMBER
Rule 61    python -> PYTHON str
Rule 62    execfile -> EXECFILE str
Rule 63    exectext -> EXECTEXT str
Rule 64    downlevel -> DOWNLEVEL expr
Rule 65    float -> FLOAT
Rule 66    str -> STRING
Rule 67    element -> expr LBRACKET expr RBRACKET
Rule 68    var -> WORD
Rule 69    variables -> VARIABLES expr
Rule 70    alg0 -> alg1
Rule 71    alg0 -> alg0 PLUSMINUS alg1
Rule 72    alg0 -> PLUSMINUS alg1
Rule 73    alg1 -> alg2
Rule 74    alg1 -> alg1 DIVMUL alg2
Rule 75    alg2 -> alg3
Rule 76    alg2 -> alg2 DPROD alg3
Rule 77    alg3 -> exprnoalg

Terminals, with rules where they appear

AMPERSAND            : 
APPLICATION          : 12
BINNUMBER            : 
BREAK                : 34
COLON                : 10 11 12 14 15 32 33
COMMA                : 38
DEFFUNC              : 11
DEFINE               : 13
DIVIDER              : 16
DIVMUL               : 74
DOUBLECOLON          : 
DOWNLEVEL            : 64
DPROD                : 76
EQUALS               : 39
EXECFILE             : 62
EXECTEXT             : 63
FLOAT                : 65
FOR                  : 
HEXNUMBER            : 
IF                   : 15
IN                   : 
INPUT                : 17
LBRACE               : 3
LBRACKET             : 30 31 67
LOOP                 : 33
LPAREN               : 18
MODULE               : 10
MPROD                : 
NUMBER               : 60
OR                   : 
PLUSMINUS            : 71 72
POINT                : 
PRINT                : 9
PYTHON               : 61
QUESTION             : 15
RBRACE               : 3
RBRACKET             : 30 31 67
RETURN               : 55
RPAREN               : 18
SEMI                 : 
STRING               : 66
SUPERWORD            : 
VARIABLES            : 69
WHILE                : 32
WORD                 : 10 12 13 14 18 39 68
WRONGSTRING          : 
error                : 

Nonterminals, with rules where they appear

alg0                 : 41 71
alg1                 : 70 71 72 74
alg2                 : 73 74 76
alg3                 : 75 76
application          : 22
args                 : 18
block                : 1 2 53
break                : 46
comms                : 30 36 38
dblock               : 10 11 12
declare              : 23
deffunc              : 20
define               : 24
divider              : 2 6 7 8
downlevel            : 25
element              : 49
equal                : 48
execfile             : 45
exectext             : 47
expr                 : 9 13 14 15 15 15 19 32 32 33 37 38 39 55 64 67 67 69
exprnoalg            : 40 77
float                : 57
func                 : 11 52
if                   : 26
inblock              : 3 6 7 8 0
input                : 29
int                  : 58
list                 : 54
loop                 : 28
metaexpr             : 5 6
module               : 21
print                : 42
python               : 44
return               : 50
str                  : 56 61 62 63
term                 : 51
var                  : 59
variables            : 43
while                : 27

Parsing method: LALR

state 0

    (0) S' -> . inblock
    (4) inblock -> .
    (5) inblock -> . metaexpr
    (6) inblock -> . inblock divider metaexpr
    (7) inblock -> . divider inblock
    (8) inblock -> . inblock divider
    (19) metaexpr -> . expr
    (20) metaexpr -> . deffunc
    (21) metaexpr -> . module
    (22) metaexpr -> . application
    (23) metaexpr -> . declare
    (24) metaexpr -> . define
    (25) metaexpr -> . downlevel
    (26) metaexpr -> . if
    (27) metaexpr -> . while
    (28) metaexpr -> . loop
    (29) metaexpr -> . input
    (16) divider -> . DIVIDER
    (40) expr -> . exprnoalg
    (41) expr -> . alg0
    (42) expr -> . print
    (43) expr -> . variables
    (44) expr -> . python
    (45) expr -> . execfile
    (46) expr -> . break
    (47) expr -> . exectext
    (48) expr -> . equal
    (49) expr -> . element
    (50) expr -> . return
    (11) deffunc -> . DEFFUNC func COLON dblock
    (10) module -> . MODULE WORD COLON dblock
    (12) application -> . APPLICATION WORD COLON dblock
    (14) declare -> . WORD COLON expr
    (13) define -> . DEFINE WORD expr
    (64) downlevel -> . DOWNLEVEL expr
    (15) if -> . IF expr QUESTION expr COLON expr
    (32) while -> . WHILE expr COLON expr
    (33) loop -> . LOOP COLON expr
    (17) input -> . INPUT
    (51) exprnoalg -> . term
    (52) exprnoalg -> . func
    (53) exprnoalg -> . block
    (54) exprnoalg -> . list
    (70) alg0 -> . alg1
    (71) alg0 -> . alg0 PLUSMINUS alg1
    (72) alg0 -> . PLUSMINUS alg1
    (9) print -> . PRINT expr
    (69) variables -> . VARIABLES expr
    (61) python -> . PYTHON str
    (62) execfile -> . EXECFILE str
    (34) break -> . BREAK
    (63) exectext -> . EXECTEXT str
    (39) equal -> . WORD EQUALS expr
    (67) element -> . expr LBRACKET expr RBRACKET
    (55) return -> . RETURN expr
    (56) term -> . str
    (57) term -> . float
    (58) term -> . int
    (59) term -> . var
    (18) func -> . WORD LPAREN args RPAREN
    (3) block -> . LBRACE inblock RBRACE
    (30) list -> . LBRACKET comms RBRACKET
    (31) list -> . LBRACKET RBRACKET
    (73) alg1 -> . alg2
    (74) alg1 -> . alg1 DIVMUL alg2
    (66) str -> . STRING
    (65) float -> . FLOAT
    (60) int -> . NUMBER
    (68) var -> . WORD
    (75) alg2 -> . alg3
    (76) alg2 -> . alg2 DPROD alg3
    (77) alg3 -> . exprnoalg

  ! shift/reduce conflict for DIVIDER resolved as shift
    $end            reduce using rule 4 (inblock -> .)
    DIVIDER         shift and go to state 5
    DEFFUNC         shift and go to state 21
    MODULE          shift and go to state 9
    APPLICATION     shift and go to state 26
    WORD            shift and go to state 34
    DEFINE          shift and go to state 45
    DOWNLEVEL       shift and go to state 41
    IF              shift and go to state 20
    WHILE           shift and go to state 10
    LOOP            shift and go to state 27
    INPUT           shift and go to state 59
    PLUSMINUS       shift and go to state 39
    PRINT           shift and go to state 17
    VARIABLES       shift and go to state 14
    PYTHON          shift and go to state 36
    EXECFILE        shift and go to state 13
    BREAK           shift and go to state 51
    EXECTEXT        shift and go to state 33
    RETURN          shift and go to state 44
    LBRACE          shift and go to state 60
    LBRACKET        shift and go to state 22
    STRING          shift and go to state 28
    FLOAT           shift and go to state 12
    NUMBER          shift and go to state 1

  ! DIVIDER         [ reduce using rule 4 (inblock -> .) ]

    downlevel                      shift and go to state 31
    list                           shift and go to state 32
    element                        shift and go to state 2
    term                           shift and go to state 19
    application                    shift and go to state 4
    input                          shift and go to state 6
    str                            shift and go to state 37
    print                          shift and go to state 38
    var                            shift and go to state 46
    block                          shift and go to state 35
    alg3                           shift and go to state 42
    loop                           shift and go to state 40
    while                          shift and go to state 8
    float                          shift and go to state 7
    func                           shift and go to state 3
    exectext                       shift and go to state 49
    alg0                           shift and go to state 11
    divider                        shift and go to state 43
    deffunc                        shift and go to state 15
    exprnoalg                      shift and go to state 16
    execfile                       shift and go to state 47
    expr                           shift and go to state 48
    alg2                           shift and go to state 18
    return                         shift and go to state 24
    inblock                        shift and go to state 54
    equal                          shift and go to state 50
    metaexpr                       shift and go to state 52
    define                         shift and go to state 53
    alg1                           shift and go to state 23
    if                             shift and go to state 29
    int                            shift and go to state 55
    module                         shift and go to state 25
    python                         shift and go to state 56
    declare                        shift and go to state 57
    variables                      shift and go to state 58
    break                          shift and go to state 30

state 1

    (60) int -> NUMBER .

    LBRACKET        reduce using rule 60 (int -> NUMBER .)
    RBRACKET        reduce using rule 60 (int -> NUMBER .)
    COMMA           reduce using rule 60 (int -> NUMBER .)
    RPAREN          reduce using rule 60 (int -> NUMBER .)
    DPROD           reduce using rule 60 (int -> NUMBER .)
    DIVMUL          reduce using rule 60 (int -> NUMBER .)
    PLUSMINUS       reduce using rule 60 (int -> NUMBER .)
    DIVIDER         reduce using rule 60 (int -> NUMBER .)
    $end            reduce using rule 60 (int -> NUMBER .)
    COLON           reduce using rule 60 (int -> NUMBER .)
    QUESTION        reduce using rule 60 (int -> NUMBER .)
    RBRACE          reduce using rule 60 (int -> NUMBER .)


state 2

    (49) expr -> element .

    LBRACKET        reduce using rule 49 (expr -> element .)
    RBRACKET        reduce using rule 49 (expr -> element .)
    COMMA           reduce using rule 49 (expr -> element .)
    RPAREN          reduce using rule 49 (expr -> element .)
    COLON           reduce using rule 49 (expr -> element .)
    DIVIDER         reduce using rule 49 (expr -> element .)
    $end            reduce using rule 49 (expr -> element .)
    RBRACE          reduce using rule 49 (expr -> element .)
    QUESTION        reduce using rule 49 (expr -> element .)


state 3

    (52) exprnoalg -> func .

    DPROD           reduce using rule 52 (exprnoalg -> func .)
    DIVMUL          reduce using rule 52 (exprnoalg -> func .)
    PLUSMINUS       reduce using rule 52 (exprnoalg -> func .)
    LBRACKET        reduce using rule 52 (exprnoalg -> func .)
    DIVIDER         reduce using rule 52 (exprnoalg -> func .)
    $end            reduce using rule 52 (exprnoalg -> func .)
    COLON           reduce using rule 52 (exprnoalg -> func .)
    QUESTION        reduce using rule 52 (exprnoalg -> func .)
    RBRACKET        reduce using rule 52 (exprnoalg -> func .)
    COMMA           reduce using rule 52 (exprnoalg -> func .)
    RBRACE          reduce using rule 52 (exprnoalg -> func .)
    RPAREN          reduce using rule 52 (exprnoalg -> func .)


state 4

    (22) metaexpr -> application .

    RBRACE          reduce using rule 22 (metaexpr -> application .)
    DIVIDER         reduce using rule 22 (metaexpr -> application .)
    $end            reduce using rule 22 (metaexpr -> application .)


state 5

    (16) divider -> DIVIDER .

    DEFFUNC         reduce using rule 16 (divider -> DIVIDER .)
    MODULE          reduce using rule 16 (divider -> DIVIDER .)
    APPLICATION     reduce using rule 16 (divider -> DIVIDER .)
    WORD            reduce using rule 16 (divider -> DIVIDER .)
    DEFINE          reduce using rule 16 (divider -> DIVIDER .)
    DOWNLEVEL       reduce using rule 16 (divider -> DIVIDER .)
    IF              reduce using rule 16 (divider -> DIVIDER .)
    WHILE           reduce using rule 16 (divider -> DIVIDER .)
    LOOP            reduce using rule 16 (divider -> DIVIDER .)
    INPUT           reduce using rule 16 (divider -> DIVIDER .)
    PLUSMINUS       reduce using rule 16 (divider -> DIVIDER .)
    PRINT           reduce using rule 16 (divider -> DIVIDER .)
    VARIABLES       reduce using rule 16 (divider -> DIVIDER .)
    PYTHON          reduce using rule 16 (divider -> DIVIDER .)
    EXECFILE        reduce using rule 16 (divider -> DIVIDER .)
    BREAK           reduce using rule 16 (divider -> DIVIDER .)
    EXECTEXT        reduce using rule 16 (divider -> DIVIDER .)
    RETURN          reduce using rule 16 (divider -> DIVIDER .)
    LBRACE          reduce using rule 16 (divider -> DIVIDER .)
    LBRACKET        reduce using rule 16 (divider -> DIVIDER .)
    STRING          reduce using rule 16 (divider -> DIVIDER .)
    FLOAT           reduce using rule 16 (divider -> DIVIDER .)
    NUMBER          reduce using rule 16 (divider -> DIVIDER .)
    DIVIDER         reduce using rule 16 (divider -> DIVIDER .)
    $end            reduce using rule 16 (divider -> DIVIDER .)
    RBRACE          reduce using rule 16 (divider -> DIVIDER .)


state 6

    (29) metaexpr -> input .

    RBRACE          reduce using rule 29 (metaexpr -> input .)
    DIVIDER         reduce using rule 29 (metaexpr -> input .)
    $end            reduce using rule 29 (metaexpr -> input .)


state 7

    (57) term -> float .

    LBRACKET        reduce using rule 57 (term -> float .)
    DIVIDER         reduce using rule 57 (term -> float .)
    $end            reduce using rule 57 (term -> float .)
    COLON           reduce using rule 57 (term -> float .)
    QUESTION        reduce using rule 57 (term -> float .)
    RBRACKET        reduce using rule 57 (term -> float .)
    COMMA           reduce using rule 57 (term -> float .)
    RBRACE          reduce using rule 57 (term -> float .)
    RPAREN          reduce using rule 57 (term -> float .)
    DPROD           reduce using rule 57 (term -> float .)
    DIVMUL          reduce using rule 57 (term -> float .)
    PLUSMINUS       reduce using rule 57 (term -> float .)


state 8

    (27) metaexpr -> while .

    RBRACE          reduce using rule 27 (metaexpr -> while .)
    DIVIDER         reduce using rule 27 (metaexpr -> while .)
    $end            reduce using rule 27 (metaexpr -> while .)


state 9

    (10) module -> MODULE . WORD COLON dblock

    WORD            shift and go to state 61


state 10

    (32) while -> WHILE . expr COLON expr
    (40) expr -> . exprnoalg
    (41) expr -> . alg0
    (42) expr -> . print
    (43) expr -> . variables
    (44) expr -> . python
    (45) expr -> . execfile
    (46) expr -> . break
    (47) expr -> . exectext
    (48) expr -> . equal
    (49) expr -> . element
    (50) expr -> . return
    (51) exprnoalg -> . term
    (52) exprnoalg -> . func
    (53) exprnoalg -> . block
    (54) exprnoalg -> . list
    (70) alg0 -> . alg1
    (71) alg0 -> . alg0 PLUSMINUS alg1
    (72) alg0 -> . PLUSMINUS alg1
    (9) print -> . PRINT expr
    (69) variables -> . VARIABLES expr
    (61) python -> . PYTHON str
    (62) execfile -> . EXECFILE str
    (34) break -> . BREAK
    (63) exectext -> . EXECTEXT str
    (39) equal -> . WORD EQUALS expr
    (67) element -> . expr LBRACKET expr RBRACKET
    (55) return -> . RETURN expr
    (56) term -> . str
    (57) term -> . float
    (58) term -> . int
    (59) term -> . var
    (18) func -> . WORD LPAREN args RPAREN
    (3) block -> . LBRACE inblock RBRACE
    (30) list -> . LBRACKET comms RBRACKET
    (31) list -> . LBRACKET RBRACKET
    (73) alg1 -> . alg2
    (74) alg1 -> . alg1 DIVMUL alg2
    (66) str -> . STRING
    (65) float -> . FLOAT
    (60) int -> . NUMBER
    (68) var -> . WORD
    (75) alg2 -> . alg3
    (76) alg2 -> . alg2 DPROD alg3
    (77) alg3 -> . exprnoalg

    PLUSMINUS       shift and go to state 39
    PRINT           shift and go to state 17
    VARIABLES       shift and go to state 14
    PYTHON          shift and go to state 36
    EXECFILE        shift and go to state 13
    BREAK           shift and go to state 51
    EXECTEXT        shift and go to state 33
    WORD            shift and go to state 62
    RETURN          shift and go to state 44
    LBRACE          shift and go to state 60
    LBRACKET        shift and go to state 22
    STRING          shift and go to state 28
    FLOAT           shift and go to state 12
    NUMBER          shift and go to state 1

    list                           shift and go to state 32
    element                        shift and go to state 2
    alg3                           shift and go to state 42
    block                          shift and go to state 35
    str                            shift and go to state 37
    print                          shift and go to state 38
    float                          shift and go to state 7
    func                           shift and go to state 3
    alg0                           shift and go to state 11
    exprnoalg                      shift and go to state 16
    var                            shift and go to state 46
    execfile                       shift and go to state 47
    expr                           shift and go to state 63
    return                         shift and go to state 24
    exectext                       shift and go to state 49
    equal                          shift and go to state 50
    alg1                           shift and go to state 23
    term                           shift and go to state 19
    int                            shift and go to state 55
    python                         shift and go to state 56
    alg2                           shift and go to state 18
    variables                      shift and go to state 58
    break                          shift and go to state 30

state 11

    (41) expr -> alg0 .
    (71) alg0 -> alg0 . PLUSMINUS alg1

    LBRACKET        reduce using rule 41 (expr -> alg0 .)
    RBRACKET        reduce using rule 41 (expr -> alg0 .)
    COMMA           reduce using rule 41 (expr -> alg0 .)
    RPAREN          reduce using rule 41 (expr -> alg0 .)
    COLON           reduce using rule 41 (expr -> alg0 .)
    DIVIDER         reduce using rule 41 (expr -> alg0 .)
    $end            reduce using rule 41 (expr -> alg0 .)
    RBRACE          reduce using rule 41 (expr -> alg0 .)
    QUESTION        reduce using rule 41 (expr -> alg0 .)
    PLUSMINUS       shift and go to state 64


state 12

    (65) float -> FLOAT .

    LBRACKET        reduce using rule 65 (float -> FLOAT .)
    DIVIDER         reduce using rule 65 (float -> FLOAT .)
    $end            reduce using rule 65 (float -> FLOAT .)
    COLON           reduce using rule 65 (float -> FLOAT .)
    QUESTION        reduce using rule 65 (float -> FLOAT .)
    RBRACKET        reduce using rule 65 (float -> FLOAT .)
    COMMA           reduce using rule 65 (float -> FLOAT .)
    RBRACE          reduce using rule 65 (float -> FLOAT .)
    RPAREN          reduce using rule 65 (float -> FLOAT .)
    DPROD           reduce using rule 65 (float -> FLOAT .)
    DIVMUL          reduce using rule 65 (float -> FLOAT .)
    PLUSMINUS       reduce using rule 65 (float -> FLOAT .)


state 13

    (62) execfile -> EXECFILE . str
    (66) str -> . STRING

    STRING          shift and go to state 28

    str                            shift and go to state 65

state 14

    (69) variables -> VARIABLES . expr
    (40) expr -> . exprnoalg
    (41) expr -> . alg0
    (42) expr -> . print
    (43) expr -> . variables
    (44) expr -> . python
    (45) expr -> . execfile
    (46) expr -> . break
    (47) expr -> . exectext
    (48) expr -> . equal
    (49) expr -> . element
    (50) expr -> . return
    (51) exprnoalg -> . term
    (52) exprnoalg -> . func
    (53) exprnoalg -> . block
    (54) exprnoalg -> . list
    (70) alg0 -> . alg1
    (71) alg0 -> . alg0 PLUSMINUS alg1
    (72) alg0 -> . PLUSMINUS alg1
    (9) print -> . PRINT expr
    (69) variables -> . VARIABLES expr
    (61) python -> . PYTHON str
    (62) execfile -> . EXECFILE str
    (34) break -> . BREAK
    (63) exectext -> . EXECTEXT str
    (39) equal -> . WORD EQUALS expr
    (67) element -> . expr LBRACKET expr RBRACKET
    (55) return -> . RETURN expr
    (56) term -> . str
    (57) term -> . float
    (58) term -> . int
    (59) term -> . var
    (18) func -> . WORD LPAREN args RPAREN
    (3) block -> . LBRACE inblock RBRACE
    (30) list -> . LBRACKET comms RBRACKET
    (31) list -> . LBRACKET RBRACKET
    (73) alg1 -> . alg2
    (74) alg1 -> . alg1 DIVMUL alg2
    (66) str -> . STRING
    (65) float -> . FLOAT
    (60) int -> . NUMBER
    (68) var -> . WORD
    (75) alg2 -> . alg3
    (76) alg2 -> . alg2 DPROD alg3
    (77) alg3 -> . exprnoalg

    PLUSMINUS       shift and go to state 39
    PRINT           shift and go to state 17
    VARIABLES       shift and go to state 14
    PYTHON          shift and go to state 36
    EXECFILE        shift and go to state 13
    BREAK           shift and go to state 51
    EXECTEXT        shift and go to state 33
    WORD            shift and go to state 62
    RETURN          shift and go to state 44
    LBRACE          shift and go to state 60
    LBRACKET        shift and go to state 22
    STRING          shift and go to state 28
    FLOAT           shift and go to state 12
    NUMBER          shift and go to state 1

    list                           shift and go to state 32
    element                        shift and go to state 2
    alg3                           shift and go to state 42
    block                          shift and go to state 35
    str                            shift and go to state 37
    print                          shift and go to state 38
    float                          shift and go to state 7
    func                           shift and go to state 3
    alg0                           shift and go to state 11
    exprnoalg                      shift and go to state 16
    var                            shift and go to state 46
    execfile                       shift and go to state 47
    expr                           shift and go to state 66
    return                         shift and go to state 24
    exectext                       shift and go to state 49
    equal                          shift and go to state 50
    alg1                           shift and go to state 23
    term                           shift and go to state 19
    int                            shift and go to state 55
    python                         shift and go to state 56
    alg2                           shift and go to state 18
    variables                      shift and go to state 58
    break                          shift and go to state 30

state 15

    (20) metaexpr -> deffunc .

    RBRACE          reduce using rule 20 (metaexpr -> deffunc .)
    DIVIDER         reduce using rule 20 (metaexpr -> deffunc .)
    $end            reduce using rule 20 (metaexpr -> deffunc .)


state 16

    (40) expr -> exprnoalg .
    (77) alg3 -> exprnoalg .

  ! reduce/reduce conflict for LBRACKET resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for DIVIDER resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for $end resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for RBRACE resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for COLON resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for QUESTION resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for COMMA resolved using rule 40 (expr -> exprnoalg .)
  ! reduce/reduce conflict for RPAREN resolved using rule 40 (expr -> exprnoalg .)
    LBRACKET        reduce using rule 40 (expr -> exprnoalg .)
    RBRACKET        reduce using rule 40 (expr -> exprnoalg .)
    COMMA           reduce using rule 40 (expr -> exprnoalg .)
    RPAREN          reduce using rule 40 (expr -> exprnoalg .)
    COLON           reduce using rule 40 (expr -> exprnoalg .)
    DIVIDER         reduce using rule 40 (expr -> exprnoalg .)
    $end            reduce using rule 40 (expr -> exprnoalg .)
    RBRACE          reduce using rule 40 (expr -> exprnoalg .)
    QUESTION        reduce using rule 40 (expr -> exprnoalg .)
    DPROD           reduce using rule 77 (alg3 -> exprnoalg .)
    DIVMUL          reduce using rule 77 (alg3 -> exprnoalg .)
    PLUSMINUS       reduce using rule 77 (alg3 -> exprnoalg .)

  ! LBRACKET        [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! DIVIDER         [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! $end            [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! RBRACE          [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! COLON           [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! QUESTION        [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! RBRACKET        [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! COMMA           [ reduce using rule 77 (alg3 -> exprnoalg .) ]
  ! RPAREN          [ reduce using rule 77 (alg3 -> exprnoalg .) ]


state 17

    (9) print -> PRINT . expr
    (40) expr -> . exprnoalg
    (41) expr -> . alg0
    (42) expr -> . print
    (43) expr -> . variables
    (44) expr -> . python
    (45) expr -> . execfile
    (46) expr -> . break
    (47) expr -> . exectext
    (48) expr -> . equal
    (49) expr -> . element
    (50) expr -> . return
    (51) exprnoalg -> . term
    (52) exprnoalg -> . func
    (53) exprnoalg -> . block
    (54) exprnoalg -> . list
    (70) alg0 -> . alg1
    (71) alg0 -> . alg0 PLUSMINUS alg1
    (72) alg0 -> . PLUSMINUS alg1
    (9) print -> . PRINT expr
    (69) variables -> . VARIABLES expr
    (61) python -> . PYTHON str
    (62) execfile -> . EXECFILE str
    (34) break -> . BREAK
    (63) exectext -> . EXECTEXT str
    (39) equal -> . WORD EQUALS expr
    (67) element -> . expr LBRACKET expr RBRACKET
    (55) return -> . RETURN expr
    (56) term -> . str
    (57) term -> . float
    (58) term -> . int
    (59) term -> . var
    (18) func -> . WORD LPAREN args RPAREN
    (3) block -> . LBRACE inblock RBRACE
    (30) list -> . LBRACKET comms RBRACKET
    (31) list -> . LBRACKET RBRACKET
    (73) alg1 -> . alg2
    (74) alg1 -> . alg1 DIVMUL alg2
    (66) str -> . STRING
    (65) float -> . FLOAT
    (60) int -> . NUMBER
    (68) var -> . WORD
    (75) alg2 -> . alg3
    (76) alg2 -> . alg2 DPROD alg3
    (77) alg3 -> . exprnoalg
